add total amount test
